[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls-signatures = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.114"
